Fixed timer button bugs with unaligned styling switching. Improved button styling

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,12 @@ nav {
   padding-right: 4rem;
   width: calc(100% - 8rem);
   box-shadow: 0 2px 16px rgba(0, 0, 0, 0.2);
+  transition: 1s ease-in-out;
+}
+
+body.lit nav {
+  background-color: rgba(20, 20, 20, 0.4);
+  box-shadow:  0 2px 16px rgba(255, 107, 53, 0.05);
 }
 
 .logo-container {
@@ -193,6 +199,7 @@ footer {
   padding: 1rem 4rem;
   border-radius: 2rem;
   margin-top: auto;
+  margin-bottom: 1rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -200,6 +207,12 @@ footer {
   padding-right: 4rem;
   width: calc(100% - 10rem);
   box-shadow: 0 2px 16px rgba(0, 0, 0, 0.2);
+  transition: 1s ease-in-out;
+}
+
+body.lit footer {
+  background-color: rgba(20, 20, 20, 0.4);
+  box-shadow:  0 2px 16px rgba(255, 107, 53, 0.05);
 }
 
 footer p {
@@ -303,7 +316,7 @@ body.lit .app-container p {
   margin-top: 1rem;
   padding: 1rem;
   width: 400px;
-  background: rgba(248, 180, 217, 0.4);
+  background: rgba(248, 180, 217, 0.2);
   border-radius: 1rem;
   display: flex;
   flex-direction: row;
@@ -311,16 +324,22 @@ body.lit .app-container p {
   justify-content: center;
   align-items: center;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
+  transition: all 1s ease-in-out;
+}
+
+body.lit .btn-div {
+  background: rgba(40, 30, 25, 0.2);
+  box-shadow: 0 4px 16px rgba(255, 107, 53, 0.05);
 }
 
 .btn-div a {
   padding: 0.75rem 1.5rem;
-  background-color: #f08bb4;
+  background-color: rgba(224, 130, 202, 0.8);
   color: #fff;
   text-decoration: none;
   border-radius: 1rem;
   font-size: 1.15rem;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.6s ease-in-out;
   cursor: pointer;
 }
 
@@ -330,9 +349,17 @@ body.lit .app-container p {
   min-width: 90px;
 }
 
-.btn-start:hover {
-  background-color: #e6739b;
+.btn-div a:hover {
+  background-color: rgb(230, 115, 155);
   transform: scale(1.05);
+}
+
+body.lit .btn-div a {
+  background-color: rgba(180, 80, 50, 0.75);
+}
+
+body.lit .btn-div a:hover {
+  background-color: rgba(255, 140, 66, 0.85);
 }
 
 .modal-overlay {
